--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <h2>Suleman Saiyed</h2>
 <p class=" degination">Full Stack Developer </p>
 <p class=" bio ">Exhaustive Java developer with expertise in REST API development</p>
-<div>
+<div class="social">
 <a href="https://x.com/crackso"><i class="fa-brands fa-twitter"></i></a>
 <a href="https://www.linkedin.com/in/suleman-saiyed-16b09b190/"><i class="fa-brands fa-linkedin"></i></a>
 <a href="https://github.com/sulemanSaiyed"><i class="fa-brands fa-github"></i></a>
